[project]
name = "bet-bot"
version = "0.1.0"
description = "Telegram-бот для оценки ставок на футбол"
authors = [
  { name = "spybie" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "aiogram>=3.0.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
betbot = "bet_bot.bot:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"